og:image and favicon updated

--- a/public/500.html
+++ b/public/500.html
@@ -4,7 +4,7 @@
     <title>We're sorry, but something went wrong (500)</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
-      .rails-default-error-page {
+      .rails-error-page {
         background-color: #efefef;
         color: #2e2f30;
         text-align: center;
@@ -52,7 +52,7 @@
     </style>
   </head>
 
-  <body class="rails-default-error-page">
+  <body class="rails-error-page">
     <!-- This file lives in public/500.html -->
     <div class="dialog">
       <section class="page_404">
