--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     <title>The page you were looking for doesn't exist (404)</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
-      .rails-default-error-page {
+      .rails-error-page {
         background-color: #efefef;
         color: #2e2f30;
         text-align: center;
@@ -51,7 +51,7 @@
     </style>
   </head>
 
-  <body class="rails-default-error-page">
+  <body class="rails-error-page">
     <!-- This file lives in public/404.html -->
     <div class="dialog">
       <section class="page_404">
